<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="lib_name">iMarineLife</string>
    <string name="fieldguide">Field Guide</string>
    <string name="fieldguide_uptotdate">The field guide is up-to-date</string>
    <string name="fieldguide_willbeupdated">The field guide is being updated</string>
    <string name="localechange_willbeupdated">Languagechanges are taking hold, please wait</string>
    <string name="localechange_locations">locations and log</string>
    <string name="localechange_fieldguide">fieldguide and sightings</string>
    <string name="completed">completed</string>
    <string name="divinglog">Log</string>
    <string name="empty"></string>
    <string name="expand">Expand all</string>
    <string name="collapse">Collapse all</string>
    <string name="divinglog_page1">Log 1/3</string>
    <string name="divinglog_page2">Log 2/3</string>
    <string name="divinglog_page3">Log 3/3</string>
    <string name="present">Present: </string>
    <string name="question">\?</string>
    <!-- if question has value - the button is not shown -->
    <string name="zero">0</string>
    <!-- if zero has value - the button is not shown -->
    <string name="sightings">Sightings</string>
    <string name="search_hint">Search for species</string>
    <string name="more_identity_title">Next page (profile)</string>
    <string name="required_fields_title">Required fields</string>
    <string name="required_fields_tekst">Date, time and location are required.</string>
    <string name="not_after_today_title">Date</string>
    <string name="not_after_today_tekst">You can not make an entry for a future date.</string>
    <string name="exists_already_title">The log number already exists.</string>
    <string name="exists_already_tekst">Each log number can be used only once.</string>
    <string name="editing_sightings_notavailable_for_other_app">Sightings can only be changed in the appropriate app.</string>
    <string name="editing_location_notavailable_for_other_app">The location can only be changed in the appropriate app.</string>
    <string name="save_title">Save</string>
    <string name="more_stay_title">Next page (sightings)</string>
    <string name="search_hint_log">Search for location</string>
    <string name="add_dive">+ log entry</string>
    <string name="action_settings">Settings and Information</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="dl_list_headertext">No dives have been created yet. Choose + to make the first.</string>
    <string name="dl_id_lb_divenr">Log number:</string>
    <string name="dl_id_lb_datum">Date:</string>
    <string name="dl_id_lb_tijdtw">Time:</string>
    <string name="dl_id_lb_locatie">Location:</string>
    <string name="dl_id_lb_BuddyHeader">Co-observer</string>
    <string name="dl_id_lb_naam">Name:</string>
    <string name="dl_id_lb_email">Email:</string>
    <string name="dl_id_lb_code">Code:</string>
    <string name="dl_id_dialog_choose_buttontext">Choose</string>
    <string name="dl_id_dialog_current_buttontext">Today</string>
    <string name="dl_id_dialog_cancel_buttontext">Back</string>
    <string name="dl_id_dialog_next_buttontext">Next</string>
    <string name="dl_id_dialog_prev_buttontext">Prev.</string>
    <string name="dl_id_dialog_add_buttontext">+</string>
    <string name="dl_id_dialog_remove_buttontext">-</string>
    <string name="dl_id_dialog_ok_buttontext">OK</string>
    <string name="dl_stay_totalTime">Total time:</string>
    <string name="dl_stay_maxdepth">Visibility (Meters):</string>
    <string name="remarks">Remarks:</string>
    <string name="dive_remarks">Remarks for this log entry:</string>
    <string name="sighting_remarks">Remarks for </string>
    <string name="nav_prefs_name_label">Name:</string>
    <string name="nav_prefs_email_label">Email:</string>
    <string name="nav_prefs_code_label">Code:</string>
    <string name="general_dialog_yes_buttontext">Yes</string>
    <string name="general_dialog_no_buttontext">No</string>
    <string name="general_dialog_later_buttontext">Later</string>
    <string name="alreadyExists">The value already exists</string>
    <string name="yesnolater_changeLanguage">De languagesetting of your device has changed and the content of the app (species and descriptions a.o.) can be adapted accordingly.\n\nDo you want this?</string>
    <string name="areyousure_locationremoval">Are you sure you want to remove the following location?: </string>
    <string name="areyousure_buddychanged">Should this co-observer name be changed in all relevant dives?</string>
    <string name="externalMemoryNeeded">This app needs the external memory of this device. It is not available right now.</string>
    <string name="onlyRemovePersonal">You can only remove the locations you added yourself.</string>
    <string name="onlyRemoveNonUsedLocation">You can only remove unused locations.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_field_guide_list">FieldGuideList</string>
    <string name="title_activity_field_guide_search">FieldGuideSearchActivity</string>
    <string name="be_patient">Be patient. This can take a few seconds.</string>
    <string name="pref_description_textView_intro_title">Introduction</string>
    <string name="pref_description_textView_intro">About this app\'s background and purpose</string>
    <string name="pref_description_textView_help_title">Help</string>
    <string name="pref_description_textView_help">What is meant exactly with the values on the sighting buttons</string>
    <string name="pref_description_textView_dank_title">Thank you</string>
    <string name="pref_description_textView_dank">Contributors to the app</string>
    <string name="pref_description_textView_ack_title">Acknowledgements</string>
    <string name="pref_description_textView_ack">Acknowledging software used to create this app</string>
    <string name="pref_description_checkbox_usedefault2_title">\? of 0</string>
    <string name="pref_description_checkbox_usedefault2">Check to use 0 as the default sighting value for all newly created events.</string>
    <string name="pref_description_checkbox_sendemail">at the emailadres you provided on the main screen.</string>
    <string name="pref_description_checkbox_sendemail_title">Receive your sightings</string>
    <string name="send_prerequisite_name">Provide your name on the main screen.</string>
    <string name="send_prerequisite_code">Provide your code on the main screen.</string>
    <string name="send_prerequisite_name_and_code">Provide your name and code on the main screen.</string>
    <string name="send_prerequisite_notsent">These sightings have already been sent. You can send them only once.</string>
    <string name="send_prerequisite_internet">You are not connected to the internet right now. Try again later.</string>
    <string name="send_are_you_sure">Sending the log entry will also send on your name and emailadres. These will not be used for any other purpose than validating your input. You can send each log entry only once. Are you sure you want to send it now?</string>
    <string name="send_mailadres_not_ok">The email address you provided on the main screen is not valid. Please change the address or the setting to receive the sightings yourself.</string>
    <string name="send_mailadres_null">You did not provide an email address on the main screen. Please change the address or the setting to receive the sightings yourself.</string>
    <string name="send_succesful">The sightings have been sent.</string>
    <string name="send_failed">An error occurred while sending the sightings. Please try again later.</string>

</resources>