<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sightings_search"
        android:actionLayout="@layout/search_sightings"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search_hint"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
     <item
        android:id="@+id/sightings_send"
        android:icon="@android:drawable/ic_menu_send"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/save_title"
        android:visible="false"/>
    <item
        android:id="@+id/sightings_edit"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/save_title"/>
    <item
        android:id="@+id/sightings_collapse"
        android:icon="@drawable/navigation_collapse"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/collapse"/>
    <item
        android:id="@+id/sightings_expand"
        android:icon="@drawable/navigation_expand"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/expand"/>
<!--     <item
        android:id="@+id/dive_remarks"
        android:icon="@drawable/ic_action_new_event"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/remarks"/> -->
     <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_settings"/>


</menu>