<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_selector"
    android:descendantFocusability="blocksDescendants"
    android:clickable="false"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/header_sightings_all_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/dark"
        android:orientation="horizontal"
        android:visibility="visible" >

        <nl.imarinelife.lib.utility.RobotoTextView
            android:id="@+id/header_sightings_all_list_groupname"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="60"
            android:clickable="true"
            android:onClick="onSightingsListHeaderClick"
            android:padding="3dp"
            android:paddingLeft="10dp"
            android:text="@string/lib_name"
            android:textColor="@color/orange"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <nl.imarinelife.lib.utility.RobotoTextView
            android:id="@+id/header_sightings_all_list_default1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="15"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="onSightingsListHeaderDefaultClick"
            android:padding="3dp"
            android:paddingLeft="10dp"
            android:text="@string/question"
            android:textColor="@color/orange"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <nl.imarinelife.lib.utility.RobotoTextView
            android:id="@+id/header_sightings_all_list_default2"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="15"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="onSightingsListHeaderDefaultClick"
            android:padding="3dp"
            android:paddingLeft="10dp"
            android:text="@string/zero"
            android:textColor="@color/orange"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <nl.imarinelife.lib.utility.RobotoTextView
            android:id="@+id/header_sightings_all_list_amounts"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="10"
            android:gravity="right"
            android:padding="3dp"
            android:paddingLeft="10dp"
            android:text="@string/empty"
            android:textColor="@color/orange"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/body_sightings_all_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_sightings_all_list"
        android:layout_margin="0dp"
        android:clickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="horizontal"
        android:padding="0dp" >

        <ImageView
            android:id="@+id/sighting_image_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="45"
            android:adjustViewBounds="true"
            android:contentDescription="@string/lib_name"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_amarinelife_xxhdpi" />

        <LinearLayout
            android:id="@+id/sighting_values_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:orientation="vertical"
            android:clickable="false"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:paddingLeft="10dp" >

            <nl.imarinelife.lib.utility.RobotoTextView
                android:id="@+id/sighting_name_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:padding="3dp"
                android:text="@string/lib_name"
                android:textColor="#040404"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>